--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "for-editor",
-  "version": "1.0.0",
-  "description": "react markdown editor",
+  "name": "@cuiko/for-editor",
+  "version": "1.0.1",
+  "description": "Markdown editor for React.",
   "main": "dist/index.js",
   "scripts": {
     "start": "npm run dev",
