--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "@cuiko/for-editor",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Markdown editor for React.",
   "main": "dist/index.js",
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack-dev-server --config webpack/webpack.dev.config.js",
-    "build": "webpack --config webpack/webpack.prod.config.js",
+    "build-demo": "webpack --config webpack/webpack.prod.config.js",
     "dist": "webpack --config webpack/webpack.dist.config.js",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .eslintignore .",
     "lint-f": "eslint --fix --ext .js,.jsx,.ts,.tsx --ignore-path .eslintignore .",
     "test": "jest",
     "test-c": "jest --coverage"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": [
+        "npm run build-demo",
+        "npm run dist"
+      ]
+    }
+  },
   "jest": {
     "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cuiko/for-editor.git"
+    "url": "git+https://github.com/cuiko/for-editor.git"
   },
   "keywords": [
-    "javascript",
     "typescript",
     "react",
     "markdown",
@@ -37,12 +44,13 @@
     "index.d.ts",
     "LICENSE"
   ],
-  "homepage": "http://demo.cuiko.top/for-editor",
+  "homepage": "http://demo.cuiko.top/for-editor/",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@cuiko/eslint-config": "^1.0.0",
     "@types/classnames": "^2.2.9",
     "@types/emojione": "^2.2.6",
     "@types/jest": "^26.0.14",
@@ -53,7 +61,6 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "autoprefixer": "^9.5.1",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
@@ -61,14 +68,14 @@
     "css-loader": "^2.0.2",
     "css-modules-typescript-loader": "^2.0.4",
     "eslint": "^6.1.0",
-    "eslint-config-for": "^0.0.1",
     "eslint-plugin-react": "^7.14.3",
     "file-loader": "^4.0.0",
+    "highlight.js": "^10.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.3.0",
     "jest": "^26.5.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.15.3",
     "raw-loader": "^3.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -86,7 +93,6 @@
   "dependencies": {
     "element-resize-detector": "^1.2.1",
     "emojione": "^4.5.0",
-    "highlight.js": "^9.18.1",
     "markdown-it": "^11.0.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-container": "^3.0.0",
