--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cuiko/for-editor",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Markdown editor for React.",
   "main": "dist/index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run build-demo && npm run dist"
+      "pre-push": "npm run build-demo & npm run dist"
     }
   },
   "jest": {
